--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,406 @@
-body {
+*{
+  box-sizing: border-box;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+html {
+  scroll-behavior: smooth;
+}
+nav{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  box-shadow: 8px 3px 12px gray;
+  height: 5rem;
+  z-index: 1;
+}
+.title{
+  margin: 1rem;
+  text-decoration: none;
+}
+nav ul{
+  display: flex;
+  margin-right: 2rem;
+}
+nav ul li{
+  list-style: none;
+}
+nav ul li a{
+  display: block;
+  font-size: 1.2rem;
+  text-decoration: none;
+  color: black;
+  padding: 0 0.5rem;
+  margin: 0 0.5rem;
+  border-radius: 0.5rem;
+}
+nav ul li a:hover{
+  opacity: 0.4;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.nav-menu{
+  display: none;
+  position: absolute;
+  top: 0.75rem;
+  right: 0.5rem;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 2.25rem;
+  height: 2rem;
+}
+nav .nav-menu span{
+  width: 100%;
+  height: 0.4rem;
+  background-color: black;
+  border-radius: 0.2rem;
+}
+
+.landing{
+  height: 90vh;
+  display: flex;
+  position: relative;
+}
+.landing-details{
+  position: absolute;
+  width: 500px;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  justify-content: flex-start;
+  top: 28%;
+  left: 9%;
+}
+.landing-details h1{
+  font-size: 4rem;
+  font-weight: 800;
+}
+.landing-details p{
+  width: 300px;
+  line-height: 2rem;
+  font-size: 1.3rem;
+}
+.landing-border{
+  position: absolute;
+  right: 0;
+  width: 400px;
+  height: 90vh;
+  background-color: green;
+}
+
+.landing-img{
+  position: absolute;
+  top: 20%;
+  left: 49%;
+  z-index: 1;
+}
+
+.landing-img2{
+  width: 150px;
+  height: 150px;
+  position: absolute;
+  bottom: 0;
+}
+.button {
+  display: flex;
+  align-items: center;
+  background-color: #fb8c00;
+  width: 10rem;
+  height: 40px;
+  padding: 10px;
+  border-radius: 10px;
+  border: none;
+  font-size: 18px;
+  font-weight: 300;
+  text-decoration: none;
+}
+.button img{
+  padding-left: 8px;
+}
+.button:hover{
+  background-color: #fb8a00ce;
+}
+.about{
+  height: 90vh;
+  position: relative;
+  display: flex;
+}
+.bigcrl{
+  position: absolute;
+  top:10%;
+  left: -18%;
+  background-color: green;
+  height: 650px;
+  width: 650px;
+  border-radius: 50%;
+}
+.about-img{
+  position: absolute;
+  top: 28%;
+  left: 6%;
+  z-index: 1;
+}
+.about-details{
+  position: absolute;
+  top: 45%;
+  right: 14%;
+  display: flex;
+  flex-direction: column;
+  width: 400px;
+  justify-content: left;
+  gap: 15px;
+  transform: scale(1.3);
+}
+.about-details h5{
+  color: #fb8c00;
+  font-weight: 300;
+  font-size: 17px;
+}
+.about-details h2{
+  font-weight: 500;
+  font-size: 30px;
+}
+.about-details p{
+  font-weight: 300;
+  line-height: 25px;
+}
+
+.menu{
+  height: 90vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.menu-card{
+  display: flex;
+  flex-direction: row;
+  gap: 40px;
+}
+.menu-details{
+  padding-bottom: 50px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+
+}
+.menu-details h5{
+  color: #fb8c00;
+  font-weight: 300;
+  font-size: 1.4rem;
+  margin-bottom: 1rem;
+}
+.menu-details h3{
+  font-size: 38px;
+  font-weight: 500;
+}
+.menu-details p{
+  margin-top: 1.7rem;
+  font-weight: 300;
+}
+
+  
+.card-container1{
+  height: 370px;
+  width: 390px;
+  display: flex;
+  flex-direction: column;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.2) 0px 12px 28px 0px, rgba(0, 0, 0, 0.1) 0px 2px 4px 0px, rgba(255, 255, 255, 0.05) 0px 0px 0px 1px inset;
+}
+.card-container2{
+  height: 370px;
+  width: 390px;
+  display: flex;
+  flex-direction: column;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.2) 0px 12px 28px 0px, rgba(0, 0, 0, 0.1) 0px 2px 4px 0px, rgba(255, 255, 255, 0.05) 0px 0px 0px 1px inset;
+}
+.card-container3{
+  height: 370px;
+  width: 390px;
+  display: flex;
+  flex-direction: column;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.2) 0px 12px 28px 0px, rgba(0, 0, 0, 0.1) 0px 2px 4px 0px, rgba(255, 255, 255, 0.05) 0px 0px 0px 1px inset;
+}
+.card-deco{
+  transition: transform 0.3s;
+}
+.card-deco:hover{
+  transform: scale(1.08);
+}
+.card-deco h3{
+  padding-top: 20px;
+  padding-left: 20px;
+  font-size: 28px;
+  font-weight: 400;
+}
+.card-deco p{
+  padding-top: 7px;
+  padding-left: 20px;
+  font-size: 20px;
+  font-weight: 300;
+}
+.gallery{
+  height: 100vh;
+}
+.gallery-details h3{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 35px;
+  margin-top: 9%;
+  margin-bottom: 50px;
+  font-weight: 500;
+}
+.gallery-images{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  overflow: hidden;
+  
+}
+.gallery-images img{
+  width: 500px;
+  height: 310px;
+  opacity: 0.8;
+  
+}
+.gallery-images img:hover{
+  opacity: 1;
+}
+.contact{
+  height: 60vh;
+  display: flex;
+  flex-direction: column;
+}
+.contact-details{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.contact-details h6{
+  color: #fb8c00;
+  font-size: 20px;
+  font-weight: 300;
+}
+.contact-details p{
+  font-size: 35px;
+  font-weight: 500;
+  margin-top: 20px;
+  margin-bottom: 55px;
+}
+.contact-cards{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 50px;
+}
+.cnt{
+  height: 200px;
+  width: 350px;
+  border-radius: 96px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  box-shadow: rgba(0, 0, 0, 0.2) 0px 12px 28px 0px, rgba(0, 0, 0, 0.1) 0px 2px 4px 0px, rgba(255, 255, 255, 0.05) 0px 0px 0px 1px inset;
+}
+.cnt img{
+  transform: scale(2);
+}
+.cnt h3{
+  font-weight: 500;
+  font-size: 25px;
+}
+.cnt p{
+  font-size: 19px;
+  color: grey;
+}
+.footer{
+  height: 30vh;
+  background-color: #e0e0e0;
+  display: flex;
+  position: relative;
+}
+.footer a{
+  text-decoration: none;
+  color: black;
+  font-weight: 500;
+}
+.footer a:hover{
+  opacity: 0.4;
+}
+.footer-details{
+  display: flex;
+  align-items: center;
+  gap: 80px;
+  margin-top: 15px;
+  margin-left: 70px;
+}
+.fdetail{
+  display: flex;
+  flex-direction: column;
+  width: 460px;
+  gap: 20px;
+}
+.fdetail p{
+  color: gray;
+  font-size: 18px;
+  font-weight: 400;
+}
+.icon-flex{
+  display: flex;
+  gap: 20px;
+}
+.icon-flex img:hover{
+  opacity: 0.7;
+}
+.flast{
+  position: absolute;
+  bottom: 0;
+  left: 9%;
+  margin-bottom: 2%;
+  color: gray;
+}
+hr{
+  width: 100%;
+  position: absolute;
+  bottom: 30%;
+  background-color: grey;
+}
+
+
+
+@media (max-width: 480px)
+{
+  nav .nav-menu{
+    display: flex;
+  }
+  nav{
+    flex-direction: column;
+    align-items: start;
+  }
+  nav ul{
+    display: none;
+    flex-direction: column;
+    width: 100%;
+    margin-bottom: 0.25rem;
+  }
+  nav ul.open{
+    display: flex;
+  }
+  nav ul li{
+    width: 100%;
+    text-align: center;
+  }
+  nav ul li a {
+    margin: 0.2rem 0.5rem;
+}
 }
